--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name=”viewport” content=”width=device-width”>
     <link rel="stylesheet" href="styles.css">
     <title>Single-Page App</title>
+    <script src="artists.json"></script>
     <script src="assign2.js"></script>
     <link rel="stylsheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -16,57 +17,52 @@
      <h1>Music Companion</h1>
      <button>Credits</button>
  </header>
- <main>
-     <aside>
-        <h2>Search</h2>
-        <div id="search-criteria">
-            <label> 
-                <input id="title" type="radio" checked="checked" name="filter">
-                Title
-                <select>
-                    <option>1</option>
-                    <option>2</option>
-                    <option>3</option>
-                </select>
-            </label>
-            <label> 
-                <input type="radio" name="filter">
-                Artist
-                <select>
-                    <option>1</option>
-                    <option>2</option>
-                    <option>3</option>
-                </select>
-            </label>
-            <label>
-                <input type="radio" name="filter">
-                Genre
-                <select>
-                    <option>1</option>
-                    <option>2</option>
-                    <option>3</option>
-                </select>
-            </label>
-            <label class="bordered-input"> 
-                <input type="radio" name="filter">
-                Year
-                <label>Less<input type="number" class="params"></label>
-                <label>Greater<input type="number" class="params"></label>
-            </label>
-            <label class="bordered-input"> 
-                <input type="radio" name="filter">
-                Popularity
-                <label>Less<input type="number" class="params"></label>
-                <label>Greater<input type="number" class="params"></label>
-            </label>
-            <button>Clear</button>
-            <button>Search</button>
-        </div>
-     </aside>
-     <section>
-        <h2>Results</h2>
-     </section>
- </main>
- <footer>Sean Jamieson &copy</footer>
+ <div id="wrapper">
+    <main>
+        <aside>
+           <h2>Search</h2>
+           <div id="search-criteria">
+                <label class="search-label active" id="title"> 
+                   <input type="radio" checked="checked" name="filter">
+                     Title
+                     <input class="search-text hook" type="text">
+                </label>
+                <label class="search-label inactive" id="artist"> 
+                   <input type="radio" name="filter">
+                   Artist
+                   <input class="search-text hook" type="text" disabled>
+                </label>
+                <label class="search-label inactive" id="genre">
+                   <input type="radio" name="filter">
+                   Genre
+                   <input class="search-text hook" type="text"disabled>
+                </label>
+                <label class="bordered-input search-label inactive" id="year"> 
+                   <input type="radio" name="filter">
+                   Year
+                   <label class="param-label">Less<input type="number" class="params hook"disabled></label>
+                   <label class="param-label">Greater<input type="number" class="params hook"disabled></label>
+                </label>
+                <label class="bordered-input search-label inactive" id="popularity"> 
+                   <input type="radio" name="filter">
+                   Popularity
+                   <label class="param-label">Less<input type="number" class="params hook"disabled></label>
+                   <label class="param-label">Greater<input type="number" class="params hook"disabled></label>
+                </label>
+                <div id="button-container">
+                    <button id="clear">Clear</button>
+                    <button id="search">Search</button>
+                </div>
+           </div>
+        </aside>
+        <section>
+           <h2>Results</h2>
+           <ul>
+            <li><label id="title"><div id="first-cell" class="arrow"></div>Title</label><label id="artist"><div class="arrow remaining-cells"></div>Artist</label><label id="year"><div class="arrow remaining-cells"></div>Year</label><label id="genre"><div class="arrow remaining-cells"></div>Genre</label><label id="popularity"><div class="arrow remaining-cells"></div>Popularity</label></li>
+           </ul>
+        </section>
+    </main>
+    <footer>Sean Jamieson &copy</footer>
+</div>   
 </body>
 </html>
