added noted for later

--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@
          </div>
       </section>
    </main>
+   <!-- try rewriting to reuse the result code fom the first view-->
    <main id="playlist-view-main" class="hidden">
       <button id="close-playlist"class="header-button">Close View</button>
       <aside id="playlist-list">
