changed HTML title to reflect application

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
    <meta charset=”utf-8">
    <meta name=”viewport” content=”width=device-width”>
    <link rel="stylesheet" href="styles.css">
-   <title>Single-Page App</title>
+   <title>Music Companion</title>
    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.9.1/chart.min.js" integrity="sha512-ElRFoEQdI5Ht6kZvyzXhYG9NqjtkmlkfYk0wr6wHxU9JEHakS7UJZNeml5ALk+8IKlU6jDgMabC3vkumRokgJA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
    <script src="artists.json"></script>
    <script src="assign2.js"></script>
@@ -107,7 +107,6 @@
          </div>
       </section>
    </main>
-   <!-- try rewriting to reuse the result code fom the first view-->
    <main id="playlist-view-main" class="hidden">
       <button id="close-playlist"class="header-button">Close View</button>
       <aside id="playlist-list">
