Changed to new API and adjusted some CSS

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
    <div id="credit-panel" class="hidden">
    <div><div class="bold">Creator: <div id="exit-credits">X</div></div>Sean Jamieson</div>
    <div><div class="bold">GitHub: </div> <a href="https://github.com/Sean-Jamieson/3612-asg-2">sean-jamieson</a></div>
-   <div><div class="bold">Portfolio: </div> <a href="https://seanjamieson.zyx">https://seanjamieson.zyx</a></div> 
+   <div><div class="bold">Portfolio: </div> <a href="https://sjamieson.ca">https://sjamieson.ca</a></div> 
    </div>
 </header>
 <div id="wrapper">
